--- a/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/Modals/NewRequest__Modal.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/PurchaseRequest/Modals/NewRequest__Modal.razor
@@ -16,6 +16,6 @@
             <Alert Message="@AlertMessage" Type="AlertType.error" ShowCloseButton="false" @bind-IsVisible="IsShowAlert" />
         </div>
 
-        <PurchaseReq__Form Model="RequestModel" OnValidSubmit="HandleSave" OnCloseModal="CloseModal" IsDisabledBtns="_isDisabledBtns" />
+        <PurchaseReq__Form FormModel="RequestModel" OnValidSubmit="HandleSave" OnCloseModal="CloseModal" IsDisabledBtns="_isDisabledBtns" />
     </div>
 </div>
