--- a/SSDI.RequestMonitoring.UI/wwwroot/css/navbar.css
+++ b/SSDI.RequestMonitoring.UI/wwwroot/css/navbar.css
@@ -1,7 +1,7 @@
 ﻿/* nav */
 .navbar {
-    height: 65px;
-    padding: 1.5rem 1rem 1.5rem 1rem;
+    height: 50px;
+    padding:  0 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
