--- a/SSDI.RequestMonitoring.UI/wwwroot/css/pages/page.css
+++ b/SSDI.RequestMonitoring.UI/wwwroot/css/pages/page.css
@@ -1,4 +1,10 @@
-﻿/*#region header and header buttons */
+﻿.main--content {
+    position: relative;
+    padding: 1rem 2rem;
+    max-height: calc(100dvh - 50px);
+    overflow-y: auto;
+}
+/*#region header and header buttons */
 /*header*/
 .page__header {
     display: flex;
@@ -821,15 +827,15 @@ tr[row-type='sticky-header'] > th {
         /*  background: linear-gradient(135deg, #10b981, #34d399);
         color: #064e3b;
         box-shadow: 0 2px 8px rgba(16, 185, 129, 0.2);*/
+        border-color: #c7d2fe;
+        background: #eef2ff;
+        color: #4338ca;
+    }
+
+    .page__table-status[data-status="ForRequisition"] {
         border-color: #a7f3d0;
         background: #ecfdf5;
         color: #047857;
-    }
-
-    .page__table-status[data-status="ForFinanceApproval"] {
-        border-color: #86efac;
-        background: #f0fdf4;
-        color: #166534;
     }
 
     .page__table-status[data-status="Rejected"] {
@@ -838,15 +844,7 @@ tr[row-type='sticky-header'] > th {
         color: #dc2626;
     }
 
-    .page__table-status[data-status="7"],
-    .page__table-status[data-status="@TokenCons.Status__ApprovedToCanvas"] {
-        border-color: #fed7aa;
-        background: #fffbeb;
-        color: #92400e;
-    }
-
-    .page__table-status[data-status="8"],
-    .page__table-status[data-status="@TokenCons.Status__Closed"] {
+    .page__table-status[data-status="Closed"] {
         border-color: #d1d5db;
         background: #f9fafb;
         color: #6b7280;
@@ -1037,6 +1035,9 @@ tr[row-type='sticky-header'] > th {
 /*#endregion */
 
 @media (max-width: 768px) {
+    .main--content {
+        padding: 1rem !important;
+    }
     .page__table-container {
         height: max-content;
     }
